--- a/app/views/layout/_header.hbs
+++ b/app/views/layout/_header.hbs
@@ -28,7 +28,7 @@
                             {{#if usuarioLogado}}
                                 <li class="nav-item">
                                     <div class="dropdown dropleft">
-                                        <a href="#" class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-step="1000" data-intro="Caso queira ver esse guia novamente é só clicar em \"ver guia\"."">Bem-vindo {{usuarioLogado.local.nome}}</a>
+                                        <a href="#" class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-step="1000" data-intro='Caso queira ver esse guia novamente é só clicar em "ver guia".'>Bem-vindo {{usuarioLogado.local.nome}}</a>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <a class="dropdown-item" href="/dashboard">Dashboard</a>
                                             {{!-- <a class="dropdown-item" href="/usuarios/{{ usuarioLogado._id }}">Alterar perfil</a>
