--- a/app/views/dashboard/crashes.hbs
+++ b/app/views/dashboard/crashes.hbs
@@ -15,7 +15,8 @@
             <div class="col-md-11 shadow bg-white border rounded stats-box">
                 <h2 class="text-center">Tabela de travamentos do app</h2>
 
-                <table id="crashes" class="table table-striped responsive table-bordered" width="100%" data-hint="Cada linha da tabela é um erro que ocorreu com um usuário, especificado pelo ID usuário. Além das informações do dispositivo no momento atual do erro, existe uma coluna Stack-trace, onde é detalhado o erro que ocorreu e em qual parte do código do app.">
+                <center><div class="lds-dual-ring" id="ring-loading1"></div></center>
+                <table id="crashes" style="display: none;" class="table table-striped responsive table-bordered" width="100%" data-hint="Cada linha da tabela é um erro que ocorreu com um usuário, especificado pelo ID usuário. Além das informações do dispositivo no momento atual do erro, existe uma coluna Stack-trace, onde é detalhado o erro que ocorreu e em qual parte do código do app.">
                     <thead>
                         <tr>
                             <th>ID usuário</th>
@@ -94,6 +95,10 @@
                     "url": "//cdn.datatables.net/plug-ins/1.10.19/i18n/Portuguese-Brasil.json"
                 },
                 "data": {{{json crashes}}},
+                "drawCallback": function( settings ) {
+                    $('#ring-loading1').hide();
+                    $('#crashes').show();
+                },
                 responsive: {
                     details: {
                         display: $.fn.dataTable.Responsive.display.modal( {
