Alterado nome da série do gráfico de erros

--- a/app/views/layout/_graficosCrashes.hbs
+++ b/app/views/layout/_graficosCrashes.hbs
@@ -64,7 +64,7 @@
             name: 'Travamentos tratados',
             data: {{{json dados.graphs.crashes_mes_tratadas }}}
         }, {
-            name: 'Travamentos fatais',
+            name: 'Travamentos não tratados',
             data: {{{json dados.graphs.crashes_mes_nao_tratadas }}}
         }],
         credits: {
